; ModuleID = '/home/carl/AnghaBench/vlc/src/extr_libvlc.c_vlc_MetadataRequest.c'
source_filename = "/home/carl/AnghaBench/vlc/src/extr_libvlc.c_vlc_MetadataRequest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@VLC_ENOMEM = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vlc_MetadataRequest(i32* %0, i32* %1, i32 %2, i32* %3, i8* %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32* %3, i32** %12, align 8
  store i8* %4, i8** %13, align 8
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = call %struct.TYPE_3__* @libvlc_priv(i32* %17)
  store %struct.TYPE_3__* %18, %struct.TYPE_3__** %16, align 8
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = icmp eq i32* %21, null
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %7
  %27 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %27, i32* %8, align 4
  br label %40

28:                                               ; preds = %7
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = load i32, i32* %11, align 4
  %34 = load i32*, i32** %12, align 8
  %35 = load i8*, i8** %13, align 8
  %36 = load i32, i32* %14, align 4
  %37 = load i8*, i8** %15, align 8
  %38 = call i32 @input_preparser_Push(i32* %31, i32* %32, i32 %33, i32* %34, i8* %35, i32 %36, i8* %37)
  %39 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %39, i32* %8, align 4
  br label %40

40:                                               ; preds = %28, %26
  %41 = load i32, i32* %8, align 4
  ret i32 %41
}

declare dso_local %struct.TYPE_3__* @libvlc_priv(i32*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @input_preparser_Push(i32*, i32*, i32, i32*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
